rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: error-app-rollout
  namespace: argo-rollouts
spec:
  replicas: 3
  selector:
    matchLabels:
      app: error-app
  strategy:
    canary:
      steps: 
        - setWeight: 20
        - analysis:
            templates:
              - templateName: error-rate-analysis
        - pause: { duration: 30s }
        - setWeight: 50
        - analysis:
            templates:
              - templateName: error-rate-analysis
        - pause: { duration: 30s }
        - setWeight: 100
  template:
    metadata:
      labels:
        app: error-app
    spec:
      serviceAccountName: argo-rollouts
      automountServiceAccountToken: true
      containers:
        - name: error-app
          image: quay.io/rhn-support-ccostell/test-training/healthy-app:v7 # quay.io/rhn-support-ccostell/test-training/error-app:v4 # quay.io/rhn-support-ccostell/test-training/healthy-app:v7 
          readinessProbe:
            httpGet:
              path: /health 
              port: 8080  
              scheme: HTTP 
            initialDelaySeconds: 10
            timeoutSeconds: 4
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            volumes:
            - name: serviceaccount-token
              projected:
                sources:
                  - serviceAccountToken:
                      path: token
                      expirationSeconds: 3600
            - name: ca-certificate
              secret:
                secretName: argo-rollouts-token
                items:
                  - key: ca.crt
                    path: ca.crt
              volumeMounts:
                - name: ca-certificate
                  mountPath: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
                  readOnly: true
