error-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: error-app-service
  namespace: argotestapp
spec:
  selector:
    app: error-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
