healthy-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: healthy-app
  name: healthy-app
  namespace: argo-rollouts # argotestapp
spec:
  selector:
    app: error-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: web
  selector:
    app: healthy-app
  type: ClusterIP
