route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
    name: route-rollouts-example
    namespace: argo-rollouts
  spec:
    host: route-rollouts-example-argo-rollouts.<ingress_domain>
    path: /health
    port:
      targetPort: metrics
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: error-app
      weight: 100
    wildcardPolicy: None
